# langchain-pipeline

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/samples/: compliance_doc.txt  contract.txt  financial_report.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
gateway/: auth.py  main.py
services/: exceptions.py
services/analysis_service/: __init__.py  bedrock_client.py  callbacks.py  chains.py  events.py  guardrails.py  main.py  rag.py  tools.py
services/document_service/: __init__.py  events.py  main.py  models.py  store.py
services/event_bus/: __init__.py  bus.py
services/mlops/: __init__.py  experiments.py  logger.py  metrics.py  prompt_registry.py
services/report_service/: __init__.py  events.py  generator.py  main.py
tests/: conftest.py  test_analysis_service.py  test_auth.py  test_callbacks.py  test_chains.py  test_document_service.py  test_event_bus.py  test_experiments.py  test_gateway.py  test_guardrails.py  test_mlops.py  test_model_router.py  test_rag.py  test_report_service.py  test_tools.py
