[project]
name = "langchain-pipeline"
version = "1.0.0"
description = "LangChain + Event-Driven Microservices Pipeline with MLOps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain-core>=0.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.1.0"]
aws = ["langchain-aws>=0.1.0", "boto3>=1.34.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
